# FoMo

./: LICENCE  README.md  batch.pro  datacubes.pro  datacubes_wt.pro  dbeselj.pro  divcubes.pro  goft_table.pro  gridlos.pro  integrateemission.pro  lineongrid_goft_tab.pro  lookup_goft.pro  main.pro  mkimgcubes.pro  params.pro  prl_slices.pro  rays.pro  readcubes.pro  readimgcubes.pro  rotmat.pro  smprof_cubes.pro  tubemodes.pro  vel_modes.pro  velmod_wt.pro  wkeqsyst.pro
FoMo-gs/: GS_emission.pro  GS_parameters.pro  gs_plotting_inten_los=85.pro
chiantitables/: list_of_tables.txt  make_list_of_tables.pro  sun_coronal.abund  sun_coronal_2012_schmelz.abund  update_tables.pro
examples/: advected_kink.pro  advectiondiv.pro  advectiondivcube.pro  advectionttdiv.pro  buildcubes.pro  datacubes_wt.pro  dbeselj.pro  dbeselk.pro  disp2.pro  divcubes.pro  eigmod_wt.pro  init.pro  main.pro  params.pro  prl_slices.pro  rays.pro  rotmat.pro  tubemodes.pro  tubemodes_branch.pro  vel_modes.pro  velmod_wt.pro  visualadvection.pro  visualeigf.pro  visualeigfsav.pro
examples/datacubes/: initial.txt
examples_propagatingwaves/: datacubes_wt.pro  dbeseli.pro  disp1.pro  dispt1.pro  dispt2.pro  divcubes.pro  eigmod_wt.pro  init.pro  lineongrid_goft_tab.pro  main.pro  mkimgcubes.pro  params.pro  params_ka2.24.sav  params_propagating_sausage_0.012beta.sav  prl_slices.pro  readcubes.pro  readimgcubes.pro  tubemodes.pro  tubemodes_branch.pro  vel_modes.pro  velmod_wt.pro  visualeigf.pro  visualeigfsav.pro
examples_propagatingwaves/Cubes/: params_ka2.24.sav  params_propagating_sausage_0.012beta.sav
examples_propagatingwaves/Cubes_lowdensity/: params_ka3.00.sav  params_propagating_sausage_0.012beta.sav
fomo-c/: Makefile.am  configure.ac  fomo-doxygen.cfg  genemiss  mainpage.dox  premake
fomo-c/doc/: mainpage.dox
fomo-c/docfiles/: amrvac.dox  fomo-doxygen.cfg  imaging_via_telescope2.eps  mainpage.dox
fomo-c/example/: Makefile.am  example.cpp  searchfiles.cpp  searchfiles_2d.cpp  stiefkinkfording.cpp
fomo-c/example/example_FLASH/: Makefile.am  example_hdf5.cpp
fomo-c/example/example_mpi_amrvac/: FoMo-amrvac.h  Makefile.am  example_mpi_amrvac.cpp  read_amrvac_files.cpp  render_all_datfiles.cpp
fomo-c/example/example_vtu/: example_for_cfmesh_datset_COCONUT.cpp  example_for_txt.cpp  example_for_txt_dataset.cpp  example_for_vtu_dataset_AMRVAC.cpp  example_for_vtu_dataset_COCONUT.cpp  example_for_vtu_dataset_icarus.cpp  example_for_vtu_dataset_icarus_sphericalcoord.cpp  test_example
fomo-c/example/python_visualization/: plot_fomo_data.py  readfomo.py
fomo-c/example_FLASH/: Makefile  Makefile.am  Makefile.in  example_hdf5  example_hdf5.cpp
fomo-c/example_FLASH/.deps/: example_hdf5.Po
fomo-c/gui/fomo-gui/: config.json  fomo-gui.pro  json.h  logger.cpp  logger.h  main.cpp  mainWindow.cpp  mainWindow.h  mainwindow.ui  view.cpp  view.h  window.cpp  window.h
fomo-c/idl/: gaussfitgoftcube.pro  readgoftcube.pro  readgoftcube_dat.pro  readgoftcube_txt.pro  regular2Dcube.pro  regulargoftcube.pro  regulartwodcube.pro  synth_emission.pro
fomo-c/m4/: ax_lib_hdf5.m4  ax_vtk.m4  m4-ax_cxx_compile_stdcxx_0x.m4  m4_ax_boost_base.m4
fomo-c/python/: amrvac_animation.py  analyze_rendercube.py  example.py  readfomo.py  readgoftcube.py
fomo-c/src/: FoMo-internal.h  FoMo.h  Makefile.am  emissioncube.cpp  equilibrium.cpp  example.cpp  fillccd.cpp  fomo-CGAL.cpp  fomo-CGAL2D.cpp  fomo-CHIANTI.cpp  fomo-cube.cpp  fomo-datacube.cpp  fomo-goftcube.cpp  fomo-gpu-nearestneighbour.cpp  fomo-gpu-regulargrid.cpp  fomo-io.cpp  fomo-nearestneighbour.cpp  fomo-object.cpp  fomo-operations.cpp  fomo-projection.cpp  fomo-rendercube.cpp  fomo-simulationpoint.cpp  fomo-thomson.cpp  getarg.cpp  gpu-nearestneighbour.cl  gpu-regulargrid-kernel.cpp  gpu-regulargrid.cl  header.h  io.cpp  mainprog.cpp  patricksausage.cpp  progressbar.cpp  readframe.cpp  stiefkink.cpp  sun_coronal.cpp  writearray.cpp  writemovie.cpp  writepng.cpp  writetime.cpp  yuan.cpp
fomo-c/tools/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  determine_in_out_loop_convexhull.cpp  header.h  interpolate2d.cpp  interpolate_colour_eigenfunctions  interpolate_colour_eigenfunctions.cpp  main.cpp  polyhedron_prog_inside_test.cpp  writegrid.cpp
fomo-c/tools/hullpolyhedra/Control_set/: control_hullt0.off  control_hullt2.off  control_hullt27.off  control_hullt39.off
fomo-idl/: calculateline.pro  ch_synthetic.pro  datacubes_wt.pro  dbeseli.pro  dbeselj.pro  dbeselk.pro  dbesely.pro  degrad_res.pro  disp1.pro  disp2.pro  divcubes.pro  elements.pro  fomo_synth.pro  goft_table.pro  gridlos.pro  integrateemission.pro  interpol_emiss_data.pro  lineongrid.pro  lineongrid_goft_tab.pro  lineongrid_int_tab.pro  lookup_goft.pro  main.pro  make_aiaresponse.pro  make_dkistresponse.pro  make_eitresponse.pro  mkimgcubes.pro  params.pro  prl_slices.pro  rays_pick.pro  read_line.pro  readcubes.pro  readimgcubes.pro  rotmat.pro  synthemi.pro  tubemodes2.pro  tubemodes_branch.pro  vel_modes.pro  velmod_wt.pro  velmod_wt_old.pro  wavetube_synth.pro  (+2 more)
