bin_PROGRAMS = yuan # main patrick
# personalize your own main program here with a name and name_SOURCES,
# Remove or modified the name_SOURCES where needed 
# DY 11 Feb 2015
#main_SOURCES = header.h ../config.h mainprog.cpp getarg.cpp io.cpp equilibrium.cpp writepng.cpp fillccd.cpp writetime.cpp writemovie.cpp writearray.cpp readframe.cpp emissioncube.cpp sun_coronal.cpp
#patrick_SOURCES = header.h ../config.h patricksausage.cpp getarg.cpp io.cpp equilibrium.cpp writepng.cpp fillccd.cpp writetime.cpp writemovie.cpp writearray.cpp readframe.cpp emissioncube.cpp sun_coronal.cpp
#stiefkink_SOURCES = header.h ../config.h stiefkink.cpp getarg.cpp io.cpp equilibrium.cpp writepng.cpp fillccd.cpp writetime.cpp writemovie.cpp writearray.cpp readframe.cpp emissioncube.cpp sun_coronal.cpp
yuan_SOURCES =header.h ../config.h yuan.cpp getarg.cpp io.cpp fillccd.cpp readframe.cpp emissioncube.cpp sun_coronal.cpp

