lib_LTLIBRARIES = libFoMo.la
libFoMo_la_LDFLAGS = -shared -version-info 3:0
libFoMo_la_SOURCES=FoMo.h ../config.h fomo-object.cpp fomo-datacube.cpp fomo-operations.cpp fomo-goftcube.cpp fomo-rendercube.cpp fomo-CHIANTI.cpp fomo-CGAL.cpp fomo-io.cpp sun_coronal.cpp fomo-CGAL2D.cpp

include_HEADERS=FoMo.h

